--- a/ngl_clone_page.html
+++ b/ngl_clone_page.html
@@ -30,7 +30,7 @@
 
   <script>
     // 🔹 Paste your Google Apps Script Web App URL below
-    const scriptURL = "PASTE_YOUR_WEB_APP_URL_HERE";
+    const scriptURL = "https://script.google.com/macros/s/AKfycbxLo9v1AMKuZghMwJw1hyiKGBqHOMyDVNkJXRqSlouIHA2vGlB63bTs0Uw9d1kXMT5F/exec";
 
     const form = document.getElementById("messageForm");
 
